--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -73,10 +73,10 @@
   text-transform: uppercase;
   /* min-width: 241px;
   max-width: 241px; */
-  width: 30%;
+  /* width: 30%; */
   white-space: nowrap;
   font-size: 21px;
-  line-height: 11px;
+  line-height: 30%;
   font-weight: 700;
   color: rgb(227, 6, 19);
   font-family: Montserrat;
@@ -93,7 +93,7 @@
   transition: none;
   text-align: center;
   margin: 0px;
-  padding: 1.5% 1.5%;
+  padding: 1% 3.5%;
   letter-spacing: 0px;
   min-height: 33px;
   max-height: 33px;
@@ -115,15 +115,15 @@
   /* position: relative;
   right: 0; */
   margin-right: 6%;
-  align-self: center;
+  align-self: flex-end;
 }
 
 .flex-menu {
-  display: flex;
+  /* display: flex; */
   /* width:100vw; */
-  width:50%;
-  align-items: flex-end;
-  justify-content: flex-end;
+  /* width:50%; */
+  /* align-items: flex-end; */
+  /* justify-content: flex-end; */
 }
 
 .red-btn {
@@ -424,6 +424,7 @@
     vertical-align: middle;
     border-style: none;
     text-align: center;
+    cursor: pointer;
     transition: all .3s ease-in-out;
 }
 
@@ -434,8 +435,10 @@
 } */
 
 .filter-btn {
+  position:relative;
+  left: -10%;
   margin-bottom: 10%;
-  width:100%;
+  width:120%;
 }
 
 .model-picker {
@@ -448,4 +451,100 @@
 
 .model-picker label {
   color: #fff;
+}
+
+.car-thumnail {
+
+}
+
+.car-thumb-img {
+
+}
+
+.car-thumb-header {
+
+}
+
+.car-thumb-info {
+
+}
+
+.status {
+
+}
+
+.refnr {
+
+}
+
+.discount {
+
+}
+
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+.red-bg-btn {
+  width: 100%;
+  padding: 6px 10px;
+  position: relative;
+  margin-top: 5px;
+  border-radius: .6rem;
+  font-size: 13px;
+  background-color: red;
+  color: #fff;
+  border: 1px solid red;
+  font-weight: 300;
+  font-family: Montserrat,sans-serif;
+  text-transform: uppercase;
+  display: inline-block;
+  line-height: 1.25;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  touch-action: manipulation;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a.div-a {
+  color:#212529;
 }
