--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -486,34 +486,68 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 8;
     top: 0;
     right: 0;
-    background-color: #111;
+    background-color: #fff;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
+    /* padding-top: 60px; */
+    text-align: center;
+    max-width: 200px;
+    /* padding: 0 20px 20px!important; */
+    box-shadow: 0 0 20px 0 rgba(0,0,0,.2);
+    font-size: 17px;
+    font-weight: 400;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+    line-height: 1.9;
 }
 
-.sidenav a {
-    padding: 8px 8px 8px 32px;
+.sidenav .closebtn {
+    /* padding: 8px 8px 8px 32px; */
+    position: relative;
+    right: 2rem;
+    top:1rem;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 2.5rem;
+    box-sizing: border-box;
     text-decoration: none;
-    font-size: 25px;
-    color: #818181;
+    /* font-size: 25px; */
+    /* color: #818181; */
     display: block;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+    line-height: 1.9;
+    text-align: right;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    cursor: pointer;
     transition: 0.3s;
+}
+
+.menu-link {
+  display: block;
+  color: #818181;
+  text-decoration: none;
+  width: 135px;
+  margin:auto;
+  color:#000;
+  /* height: 93px; */
+  /* border-left: 1px solid #6e6e6e; */
+  font-weight: 300;
+  padding-top: 31px;
+  font-family: Montserrat,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+  font-size: 13px;
+  line-height: 40px;
+  padding: 0 1%;
+  border-bottom: 1px solid #ddd!important;
+  text-transform: uppercase;
 }
 
 .sidenav a:hover {
     color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
 }
 
 @media screen and (max-height: 450px) {
@@ -547,4 +581,19 @@
 
 a.div-a {
   color:#212529;
+}
+
+.margin-fluid {
+  margin-left: 0.6%;
+  margin-right: 0.6%;
+}
+
+.sm-spacing {
+  padding-left: 0.4%;
+  padding-right: 0.4%;
+}
+
+.spacing-top {
+  margin-top: 2%;
+  margin-bottom: 5%;
 }
