--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -66,7 +66,7 @@
 
 
 #menu_button {
-  display: inline-block;
+  display: inline;
   float: right;
   z-index: 7;
   font-family: Montserrat;
@@ -92,13 +92,13 @@
   visibility: inherit;
   transition: none;
   text-align: center;
-  margin: 0px;
-  padding: 1% 3.5%;
+  /* margin: 0px; */
+  padding: 1.4% 3.6%;
   letter-spacing: 0px;
   min-height: 33px;
   max-height: 33px;
   opacity: 1;
-  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  /* transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); */
   /* transform-origin: 50% 50% 0px; */
   outline: none !important;
   box-shadow: none !important;
@@ -116,6 +116,7 @@
   right: 0; */
   margin-right: 6%;
   align-self: flex-end;
+  margin-top: 0.4%;
 }
 
 .flex-menu {
@@ -292,7 +293,7 @@
 
 .transparent-msg p {
   z-index: 5;
-  min-width: 579px;
+  /* min-width: 579px; */
   max-width: 579px;
   white-space: normal;
   font-size: 33px;
@@ -314,6 +315,7 @@
   transform-origin: 50% 50% 0px;
   transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
   margin: auto;
+  /* max-width: 90%; */
 }
 
 .footer-darkgrey {
@@ -583,9 +585,14 @@ a.div-a {
   color:#212529;
 }
 
+.nav-logo {
+  width:17%;
+  vertical-align: middle;
+}
+
 .margin-fluid {
-  margin-left: 0.6%;
-  margin-right: 0.6%;
+  padding-left: 1.2%;
+  /* margin-right: 0.6%; */
 }
 
 .sm-spacing {
@@ -596,4 +603,47 @@ a.div-a {
 .spacing-top {
   margin-top: 2%;
   margin-bottom: 5%;
+}
+
+.title-buttons {
+  padding-right: 10px;
+  padding-left: 10px;
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  font-weight: 300;
+  font-family: Montserrat,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+  font-size: .95rem;
+  line-height: 1.9;
+  color: #292b2c;
+  background-color: #fff;
+}
+
+.title-buttons h1 {
+  font-size: 28px;
+  text-transform: uppercase;
+  margin-bottom: .5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+  margin: .67em 0;
+  -webkit-margin-before: 0.67em;
+  -webkit-margin-after: 0.67em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
+
+/* .carousel-full {
+  width: 100% !important;
+} */
+
+.slider-img {
+  height: auto !important;
+  object-fit: cover !important;
+  /* height: auto !important;
+  width: 100% !important; */
+  /* width: 100% !important;
+  height: auto !important;
+  max-height: 80% !important; */
 }
