--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -241,7 +241,12 @@
   align-items: center;
   justify-content: space-between;
   text-align: center;
-  height: 40vh;
+  /* height: 40vh; */
+}
+
+.b-right .red-btn, .n-b .red-btn {
+  margin-bottom: 5%;
+  margin-top: 3%;
 }
 
 .greyback {
@@ -264,7 +269,7 @@
 .greyback h1 {
   font-weight: 600;
   margin-bottom: 32px!important;
-  height: 30px;
+  /* height: 30px; */
   color: #2e2d2c;
   top: 0;
   font-size: 27px!important;
@@ -703,6 +708,23 @@ a.div-a {
   display: block;
 }
 
+.summary-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: space-around;
+}
+
+.summary-row .desc {
+  width: 35%;
+  text-align: right;
+}
+
+.summary-row .value {
+  width: 35%;
+  text-align: left;
+}
+
 .car-detail-button-wrapper {
   margin-top: 30px;
   display: block;
@@ -806,7 +828,7 @@ a.div-a {
   margin-top: 1.5rem;
   text-align:center;
   cursor:pointer;
-  
+
 }
 
 .car-thumbs-wrapper {
@@ -833,4 +855,18 @@ a.div-a {
   -webkit-margin-end: 0px;
   margin: auto;
   margin-bottom: 5%;
+}
+
+@media (max-width: 768px) {
+  #full-options {
+    webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media (max-width: 480px) {
+  #full-options {
+    webkit-column-count: 1;
+    column-count: 1;
+  }
 }
